fix: x-overflow on add vocab form

--- a/src/Forms/VocabForm/VocabForm.scss
+++ b/src/Forms/VocabForm/VocabForm.scss
@@ -7,7 +7,6 @@
   grid-area: main;
   padding: 50px;
   max-width: 700px;
-  margin: 0 auto;
 
   .heading {
     grid-column: 2;
